[gd_scene load_steps=2 format=3 uid="uid://csettingsmenu123"]

[ext_resource type="Script" path="res://scripts/ui/settings_menu.gd" id="1_settings"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.12, 0.14, 1)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 20.0
offset_bottom = 60.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 28
text = "Settings"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 70.0
offset_right = -20.0
offset_bottom = -70.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="GameplaySection" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SectionLabel" type="Label" parent="ScrollContainer/VBoxContainer/GameplaySection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.65, 1)
theme_override_font_sizes/font_size = 14
text = "GAMEPLAY"

[node name="ShowLegalMovesRow" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/GameplaySection"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/GameplaySection/ShowLegalMovesRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Show Legal Moves"

[node name="CheckButton" type="CheckButton" parent="ScrollContainer/VBoxContainer/GameplaySection/ShowLegalMovesRow"]
layout_mode = 2
button_pressed = true

[node name="AutoFlipRow" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/GameplaySection"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/GameplaySection/AutoFlipRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Auto-Flip Board"

[node name="CheckButton" type="CheckButton" parent="ScrollContainer/VBoxContainer/GameplaySection/AutoFlipRow"]
layout_mode = 2
button_pressed = true

[node name="AutoQueenRow" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/GameplaySection"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/GameplaySection/AutoQueenRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Auto-Promote to Queen"

[node name="CheckButton" type="CheckButton" parent="ScrollContainer/VBoxContainer/GameplaySection/AutoQueenRow"]
layout_mode = 2

[node name="AudioSection" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SectionLabel" type="Label" parent="ScrollContainer/VBoxContainer/AudioSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.65, 1)
theme_override_font_sizes/font_size = 14
text = "AUDIO"

[node name="SoundRow" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/AudioSection"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/AudioSection/SoundRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sound Effects"

[node name="CheckButton" type="CheckButton" parent="ScrollContainer/VBoxContainer/AudioSection/SoundRow"]
layout_mode = 2
button_pressed = true

[node name="MusicRow" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/AudioSection"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/AudioSection/MusicRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music"

[node name="CheckButton" type="CheckButton" parent="ScrollContainer/VBoxContainer/AudioSection/MusicRow"]
layout_mode = 2
button_pressed = true

[node name="AnimationSection" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SectionLabel" type="Label" parent="ScrollContainer/VBoxContainer/AnimationSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.65, 1)
theme_override_font_sizes/font_size = 14
text = "ANIMATION"

[node name="SpeedRow" type="HBoxContainer" parent="ScrollContainer/VBoxContainer/AnimationSection"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/AnimationSection/SpeedRow"]
layout_mode = 2
text = "Speed"

[node name="SpeedSlider" type="HSlider" parent="ScrollContainer/VBoxContainer/AnimationSection/SpeedRow"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 0.1
max_value = 3.0
step = 0.1
value = 1.0

[node name="SpeedLabel" type="Label" parent="ScrollContainer/VBoxContainer/AnimationSection/SpeedRow"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
text = "1.0x"
horizontal_alignment = 2

[node name="AboutSection" type="VBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SectionLabel" type="Label" parent="ScrollContainer/VBoxContainer/AboutSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.65, 1)
theme_override_font_sizes/font_size = 14
text = "ABOUT"

[node name="VersionLabel" type="Label" parent="ScrollContainer/VBoxContainer/AboutSection"]
layout_mode = 2
text = "Chess Puzzles v1.0"

[node name="LicensesButton" type="Button" parent="ScrollContainer/VBoxContainer/AboutSection"]
layout_mode = 2
text = "Open Source Licenses"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -60.0
offset_right = -20.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"
